--- a/dendritic_cells/analyses_for_manuscript_20201015_nb.ipynb
+++ b/dendritic_cells/analyses_for_manuscript_20201015_nb.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Setup"
    ]
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Recompute flag"
    ]
@@ -145,9 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Flagstats"
    ]
@@ -587,9 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Metadata table"
    ]
@@ -631,9 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Conversion rates"
    ]
@@ -789,9 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Coverage"
    ]
@@ -1043,9 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Average methylation"
    ]
@@ -1404,9 +1390,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Retrieve and format input data"
    ]
@@ -2099,16 +2083,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
-    "# Characterize clustering"
+    "## Meth levels in DMRs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,6 +2108,110 @@
     "].dropna(how=\"any\", axis=0)\n",
     "zscores = ut.row_zscores(beta_values)\n",
     "cluster_ids_no_nas = cluster_ids_df.loc[beta_values.index].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/dmr-beta-value_agg-stats.tsv](https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/dmr-beta-value_agg-stats.tsv \"will only work within the DKFZ network\")"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "beta_values.describe().reset_index().to_csv(results_dir + '/dmr-beta-value_agg-stats.tsv')\n",
+    "ut.dkfz_link(results_dir + '/dmr-beta-value_agg-stats.tsv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\" \"> \n",
+       "<img src=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.png?1606813816.4177527\"\n",
+       "     alt=\"image not found\"\n",
+       "     style=\"max-width: 100%; max-height: 100%\">'\n",
+       "</div>\n",
+       "\n",
+       "<br>\n",
+       "Open: <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.png?1606813816.4178517\" download>png</a> | <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.pdf?1606813816.417882\" download>pdf</a> | <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.svg?1606813816.4178984\" download>svg</a> --- Copy abspath: \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.png\")>png</a>\n",
+       "     | \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.pdf\")>pdf</a>\n",
+       "     | \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_violin.svg\")>svg</a>\n",
+       "    \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(ut.cm(8), ut.cm(8)), constrained_layout=True, dpi=180)\n",
+    "sns.violinplot(data=beta_values.sample(1000))\n",
+    "ut.save_and_display(fig, png_path=results_dir + '/global-dmr-beta-values_violin.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\" \"> \n",
+       "<img src=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.png?1606813817.5634127\"\n",
+       "     alt=\"image not found\"\n",
+       "     style=\"max-width: 100%; max-height: 100%\">'\n",
+       "</div>\n",
+       "\n",
+       "<br>\n",
+       "Open: <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.png?1606813817.5635216\" download>png</a> | <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.pdf?1606813817.5635467\" download>pdf</a> | <a href=\"https://currywurst.dkfz.de/hs-ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.svg?1606813817.563564\" download>svg</a> --- Copy abspath: \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.png\")>png</a>\n",
+       "     | \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.pdf\")>pdf</a>\n",
+       "     | \n",
+       "    <a onclick=updateClipboard(\"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt/global-dmr-beta-values_boxplot.svg\")>svg</a>\n",
+       "    \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(ut.cm(8), ut.cm(8)), constrained_layout=True, dpi=180)\n",
+    "sns.boxplot(data=beta_values.sample(1000), showfliers=False)\n",
+    "ut.save_and_display(fig, png_path=results_dir + '/global-dmr-beta-values_boxplot.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Characterize clustering"
    ]
   },
   {
@@ -2160,9 +2246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Heatmap"
    ]
@@ -2310,9 +2394,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Cluster sizes"
    ]
@@ -2379,9 +2461,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Gain/loss stratified counts"
    ]
@@ -2523,18 +2603,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Gene annotation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Computation"
    ]
@@ -2569,9 +2645,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Paths to detailed annotations"
    ]
@@ -2689,9 +2763,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Paths to merged annotations"
    ]
@@ -2916,9 +2988,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Genomic regions quick viz"
    ]
@@ -2964,9 +3034,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Concatenate all available annotations"
    ]
@@ -3203,9 +3271,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Promoter DMR annos only"
    ]
@@ -3431,9 +3497,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Geneset inspection (readme!)"
    ]
@@ -3484,9 +3548,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Geneset contains duplicates (link to cleaned genesets at the end)"
    ]
@@ -4488,9 +4550,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Genesets are large"
    ]
@@ -4556,9 +4616,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Genes occur in multiple clusters"
    ]
@@ -4797,9 +4855,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Overlap counts, overlapping genes"
    ]
@@ -4821,9 +4877,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Table: dmrs vs hit in geneset (boolean)"
    ]
@@ -5144,9 +5198,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Tables: clusters vs number of hits in cluster"
    ]
@@ -7367,9 +7419,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Annotation: clusters vs marker genes found"
    ]
@@ -7538,9 +7588,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Pairwise DMR analysis"
    ]
@@ -7997,13 +8045,13 @@
     "extension": ".py",
     "format_name": "light",
     "format_version": "1.5",
-    "jupytext_version": "1.6.0"
+    "jupytext_version": "1.7.0"
    }
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mouse_hema_meth_py37] *",
+   "display_name": "Python [conda env:mouse_hema_meth_py37_mamba_full] *",
    "language": "python",
-   "name": "conda-env-mouse_hema_meth_py37-py"
+   "name": "conda-env-mouse_hema_meth_py37_mamba_full-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8015,7 +8063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
