add missing R scripts

--- a/dendritic_cells/analyses_for_manuscript_20201015_nb.ipynb
+++ b/dendritic_cells/analyses_for_manuscript_20201015_nb.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Setup"
    ]
@@ -16,6 +14,14 @@
    "outputs": [],
    "source": [
     "n_cores = 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "partial-investigator",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -49,6 +55,7 @@
     "\n",
     "# isort: on\n",
     "\n",
+    "import methlevels as ml\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import mouse_hema_meth.utils as ut\n",
@@ -57,6 +64,14 @@
     "from dendritic_cells.config import paper_context2\n",
     "from IPython.display import Markdown, display\n",
     "from pandas.api.types import CategoricalDtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aerial-accident",
+   "metadata": {},
+   "source": [
+    "## Paths"
    ]
   },
   {
@@ -85,6 +100,14 @@
    "source": [
     "results_dir = \"/icgc/dkfzlsdf/analysis/hs_ontogeny/notebook-data/gNs4xcMJscaLLwlt\"\n",
     "os.makedirs(results_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "unavailable-compatibility",
+   "metadata": {},
+   "source": [
+    "## Util functions"
    ]
   },
   {
@@ -131,7 +154,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Recompute flag"
+    "\n",
+    "## Recompute flag\n"
    ]
   },
   {
@@ -149,6 +173,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "# QC"
    ]
   },
@@ -159,6 +184,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "## Flagstats"
    ]
   },
@@ -602,6 +628,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "## Metadata table"
    ]
   },
@@ -647,7 +674,8 @@
     "tags": []
    },
    "source": [
-    "## Conversion rates"
+    "\n",
+    "## Conversion rates\n"
    ]
   },
   {
@@ -806,7 +834,8 @@
     "tags": []
    },
    "source": [
-    "## Coverage"
+    "\n",
+    "## Coverage\n"
    ]
   },
   {
@@ -1246,7 +1275,8 @@
     "tags": []
    },
    "source": [
-    "## Average methylation"
+    "\n",
+    "## Average methylation\n"
    ]
   },
   {
@@ -1607,6 +1637,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "# Retrieve and format input data"
    ]
   },
@@ -1617,7 +1648,8 @@
     "tags": []
    },
    "source": [
-    "## Read from RDS"
+    "\n",
+    "## Read from RDS\n"
    ]
   },
   {
@@ -1706,7 +1738,8 @@
     "tags": []
    },
    "source": [
-    "## Note: some values are NA"
+    "\n",
+    "## Note: some values are NA\n"
    ]
   },
   {
@@ -2081,6 +2114,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "## Extract individual dataframes (cluster ids, dmrs, betas)"
    ]
   },
@@ -2091,7 +2125,8 @@
     "tags": []
    },
    "source": [
-    "### DMRs"
+    "\n",
+    "### DMRs\n"
    ]
   },
   {
@@ -2238,7 +2273,8 @@
     "tags": []
    },
    "source": [
-    "### Cluster ids"
+    "\n",
+    "### Cluster ids\n"
    ]
   },
   {
@@ -2359,7 +2395,8 @@
     "tags": []
    },
    "source": [
-    "### Betas"
+    "\n",
+    "### Betas\n"
    ]
   },
   {
@@ -2416,45 +2453,15 @@
     "tags": []
    },
    "source": [
-    "## Extract Rep methlevels"
+    "\n",
+    "## Extract Rep methlevels\n",
+    "\n",
+    "if recompute:\n",
+    "    meth_stats_rep = lib.get_rep_meth_levels(mcalls_metadata_table, dmrs, n_cores)\n",
+    "    ut.to_pickle(meth_stats_rep, results_dir + '/rep-level-methstats_obj.p')\n",
+    "else:\n",
+    "    meth_stats_rep = ut.from_pickle(results_dir + '/rep-level-methstats_obj.p')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['cdp', 'cmop', 'dc-cd11b', 'dc-cd8a', 'hsc', 'mdp', 'monos', 'pdc'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mcalls_metadata_table.reset_index().subject.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meth_stats_rep = lib.get_rep_meth_levels(mcalls_metadata_table, dmrs, n_cores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2462,7 +2469,8 @@
     "tags": []
    },
    "source": [
-    "# Meth levels in DMRs"
+    "\n",
+    "# Meth levels in DMRs\n"
    ]
   },
   {
@@ -2687,7 +2695,8 @@
     "tags": []
    },
    "source": [
-    "### Pop-level"
+    "\n",
+    "### Pop-level\n"
    ]
   },
   {
@@ -3108,6 +3117,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "## Population distribution plots"
    ]
   },
@@ -3118,7 +3128,8 @@
     "tags": []
    },
    "source": [
-    "### Violin all"
+    "\n",
+    "### Violin all\n"
    ]
   },
   {
@@ -3168,7 +3179,8 @@
     "tags": []
    },
    "source": [
-    "### Violin selected"
+    "\n",
+    "### Violin selected\n"
    ]
   },
   {
@@ -3225,7 +3237,8 @@
     "tags": []
    },
    "source": [
-    "### Boxplot all"
+    "\n",
+    "### Boxplot all\n"
    ]
   },
   {
@@ -3274,7 +3287,8 @@
     "tags": []
    },
    "source": [
-    "# Characterize clustering"
+    "\n",
+    "# Characterize clustering\n"
    ]
   },
   {
@@ -3313,7 +3327,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Heatmap"
+    "\n",
+    "## Heatmap\n"
    ]
   },
   {
@@ -3463,7 +3478,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Cluster sizes"
+    "\n",
+    "## Cluster sizes\n"
    ]
   },
   {
@@ -3532,7 +3548,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Gain/loss stratified counts"
+    "\n",
+    "## Gain/loss stratified counts\n"
    ]
   },
   {
@@ -3676,6 +3693,7 @@
     "tags": []
    },
    "source": [
+    "\n",
     "# Gene annotation"
    ]
   },
@@ -3685,7 +3703,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Computation"
+    "\n",
+    "## Computation\n"
    ]
   },
   {
@@ -3722,7 +3741,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Paths to detailed annotations"
+    "\n",
+    "## Paths to detailed annotations\n"
    ]
   },
   {
@@ -3842,7 +3862,8 @@
     "tags": []
    },
    "source": [
-    "## Paths to merged annotations"
+    "\n",
+    "## Paths to merged annotations\n"
    ]
   },
   {
@@ -4070,7 +4091,8 @@
     "tags": []
    },
    "source": [
-    "## Genomic regions quick viz"
+    "\n",
+    "## Genomic regions quick viz\n"
    ]
   },
   {
@@ -4118,7 +4140,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "# Concatenate all available annotations"
+    "\n",
+    "# Concatenate all available annotations\n"
    ]
   },
   {
@@ -4357,7 +4380,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Promoter DMR annos only"
+    "\n",
+    "## Promoter DMR annos only\n"
    ]
   },
   {
@@ -4578,6 +4602,7 @@
     "heading_collapsed": "true"
    },
    "source": [
+    "\n",
     "# Geneset enrichment"
    ]
   },
@@ -4587,30 +4612,52 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Geneset inspection (readme!)"
+    "\n",
+    "## Geneset inspection (readme!)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "welsh-lounge",
+   "metadata": {},
+   "source": [
+    "**Note1**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note1**\n",
     "There are duplicates within the genesets; beware of this in other analyses too!"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "portuguese-palestinian",
    "metadata": {},
    "source": [
-    "**Note2**\n",
-    "The cardinality of the genesets is in part quite high; it may be beneficial for the analysis or the interpretation of the analysis if this is repeated with more curated genelists. Such as it is, each cluster has a high number of gene overlaps, which may be more difficult to interprete. (See section at the end of the notebook)"
+    "**Note2**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note3**\n",
+    "The cardinality of the genesets is in part quite high; it may be beneficial for the analysis or the interpretation of the analysis if this is repeated with more curated genelists. Such as it is, each cluster has a high number of gene overlaps, which may be more difficult to interprete. (See section at the end of the notebook)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "rotary-least",
+   "metadata": {},
+   "source": [
+    "**Note3**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A considerable number of genes occurs in multiple clusters; is this intended?"
    ]
   },
@@ -4640,7 +4687,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Geneset contains duplicates (link to cleaned genesets at the end)"
+    "\n",
+    "### Geneset contains duplicates (link to cleaned genesets at the end)\n"
    ]
   },
   {
@@ -5644,7 +5692,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Genesets are large"
+    "\n",
+    "### Genesets are large\n"
    ]
   },
   {
@@ -5712,7 +5761,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Genes occur in multiple clusters"
+    "\n",
+    "### Genes occur in multiple clusters\n"
    ]
   },
   {
@@ -5833,7 +5883,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Computation (Report with figures at the end of the section)"
+    "\n",
+    "## Computation (Report with figures at the end of the section)\n"
    ]
   },
   {
@@ -5955,7 +6006,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "## Overlap counts, overlapping genes"
+    "\n",
+    "## Overlap counts, overlapping genes\n"
    ]
   },
   {
@@ -5979,7 +6031,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Table: dmrs vs hit in geneset (boolean)"
+    "\n",
+    "### Table: dmrs vs hit in geneset (boolean)\n"
    ]
   },
   {
@@ -6302,7 +6355,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Tables: clusters vs number of hits in cluster"
+    "\n",
+    "### Tables: clusters vs number of hits in cluster\n"
    ]
   },
   {
@@ -8525,7 +8579,8 @@
     "heading_collapsed": "true"
    },
    "source": [
-    "### Annotation: clusters vs marker genes found"
+    "\n",
+    "### Annotation: clusters vs marker genes found\n"
    ]
   },
   {
@@ -8692,9 +8747,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Pairwise DMR analysis"
    ]
@@ -9143,16 +9196,30 @@
     "fig.savefig(results_dir + \"gain-loss-pw-counts-barplot.pdf\")\n",
     "link_fn(results_dir + \"gain-loss-pw-counts-barplot.pdf\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test significance of population meth differences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "varying-surgeon",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "q1_median_q3_rep_wide, q1_median_q3_rep_long = lib.get_meth_stats_arrays(meth_stats_rep)"
+   ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "text_representation": {
-    "extension": ".py",
-    "format_name": "light",
-    "format_version": "1.5",
-    "jupytext_version": "1.7.0"
-   }
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python [conda env:mouse_hema_meth_py37_mamba_full]",
